--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -1,13 +1,26 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    
+    encoders:
+        Symfony\Component\Security\Core\User\User: 
+            algorithm: bcrypt
+            cost: 12
     providers:
-        in_memory: { memory: ~ }
+        in_memory:
+            memory: 
+                users:
+                    admin:
+                        password: $2y$12$6.GhSL1h7kN1LUZOW5oMUudo3T28vzrIlq8ioPcUEMsY./5ny9f2K
+                        roles: 'ROLE_ADMIN'
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: ~
+            form_login: 
+                login_path: login
+                check_path: login
 
             # activate different ways to authenticate
 
@@ -20,5 +33,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
